# melp_restaurant_api

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  sample.env
alembic/: env.py  script.py.mako
alembic/versions/: 9c9db9b52707_include_restaurant.py  a02ff15713f0_add_restaurant_table.py
app/api/: __init__.py
app/api/v1/: api_router.py
app/api/v1/routes/: restaurant_routes.py
app/core/: __init__.py  config.py
app/core/settings/: __init__.py  app_settings.py  base_settings.py  development_settings.py  loggin_config.py  production_settings.py
app/infrastructure/: __init__.py  db.py
app/models/: __init__.py  restaurant.py
app/repositories/: restaurant_repository.py
app/schemas/: __init__.py  restaurant_schema.py
app/services/: __init__.py  restaurant_services.py
app/utils/: __init__.py  errors.py
